# atlas-rest-haskell

./: .gitignore  CHANGELOG.md  README.md  atlas-rest-haskell.cabal
app/: Main.hs
