cabal-version:      2.4
name:               atlas-rest-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Andrii Maliuta
maintainer:         quadr988@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable atlas-rest-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.13.0.0
                    , text ^>= 2.0
                    , bytestring ^>= 0.11.3.1
                    , envparse ^>= 0.4.1
                    , time ^>=1.9.3
                    , HTTP
                    , http-types == 0.12.3
                    , http-client >= 0.7.13.1
                    , http-conduit >= 2.3.8
                    , zlib >= 0.6.3.0
                    , convertible >= 1.1.1.0
                    , aeson == 2.1.1.0
                    , yaml >= 0.11.8.0
                    , html-parse >= 0.2.0.1
                    , tagsoup
                    , req >= 3.13.0
    hs-source-dirs:   app
    default-language: Haskell2010
